--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -9,6 +9,14 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
+GPDMA1.CIRCULARMODE_GPDMACH0=ENABLE
+GPDMA1.DESTDATAWIDTH_GPDMACH0=DMA_DEST_DATAWIDTH_WORD
+GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
+GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
+GPDMA1.IPParameters=CIRCULARMODE_GPDMACH0,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCINC_GPDMACH0,SRCDATAWIDTH_GPDMACH0,DESTDATAWIDTH_GPDMACH0
+GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_TIM2_UP
+GPDMA1.SRCDATAWIDTH_GPDMACH0=DMA_SRC_DATAWIDTH_WORD
+GPDMA1.SRCINC_GPDMACH0=DMA_SINC_INCREMENTED
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
@@ -18,51 +26,65 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32U5
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M33_NS
-Mcu.IP10=SYS
-Mcu.IP11=UCPD1
-Mcu.IP12=USART1
-Mcu.IP13=USB_OTG_FS
+Mcu.IP10=RCC
+Mcu.IP11=SPI2
+Mcu.IP12=SYS
+Mcu.IP13=TIM2
+Mcu.IP14=TIM3
+Mcu.IP15=UCPD1
+Mcu.IP16=USART1
+Mcu.IP17=USB_OTG_FS
 Mcu.IP2=DEBUG
-Mcu.IP3=ICACHE
-Mcu.IP4=LPBAM
-Mcu.IP5=LPBAMQUEUE
-Mcu.IP6=MEMORYMAP
-Mcu.IP7=NVIC
-Mcu.IP8=PWR
-Mcu.IP9=RCC
-Mcu.IPNb=14
+Mcu.IP3=GPDMA1
+Mcu.IP4=ICACHE
+Mcu.IP5=LPBAM
+Mcu.IP6=LPBAMQUEUE
+Mcu.IP7=MEMORYMAP
+Mcu.IP8=NVIC
+Mcu.IP9=PWR
+Mcu.IPNb=18
 Mcu.Name=STM32U575ZITxQ
 Mcu.Package=LQFP144
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13 (JTMS/SWDIO)
-Mcu.Pin13=PA14 (JTCK/SWCLK)
-Mcu.Pin14=PA15 (JTDI)
-Mcu.Pin15=PB3 (JTDO/TRACESWO)
-Mcu.Pin16=PB5
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_ICACHE_VS_ICACHE
-Mcu.Pin19=VP_ICACHE_VS_ENABLE_ICACHE_MEMORY
-Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin21=VP_PWR_VS_DBSignals
-Mcu.Pin22=VP_PWR_VS_SECSignals
-Mcu.Pin23=VP_PWR_VS_LPOM
-Mcu.Pin24=VP_PWR_Vdda
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_LPBAM_VS_SIG1
-Mcu.Pin27=VP_LPBAM_VS_SIG4
-Mcu.Pin28=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin3=PC2
-Mcu.Pin4=PB14
-Mcu.Pin5=PB15
-Mcu.Pin6=PG2
-Mcu.Pin7=PC7
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=29
+Mcu.Pin0=PE3
+Mcu.Pin1=PE4
+Mcu.Pin10=PA3
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PG2
+Mcu.Pin15=PC7
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA11
+Mcu.Pin19=PA12
+Mcu.Pin2=PC13
+Mcu.Pin20=PA13 (JTMS/SWDIO)
+Mcu.Pin21=PA14 (JTCK/SWCLK)
+Mcu.Pin22=PA15 (JTDI)
+Mcu.Pin23=PD3
+Mcu.Pin24=PB3 (JTDO/TRACESWO)
+Mcu.Pin25=PB5
+Mcu.Pin26=PB7
+Mcu.Pin27=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin28=VP_ICACHE_VS_ICACHE
+Mcu.Pin29=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin3=PC14-OSC32_IN (PC14)
+Mcu.Pin30=VP_PWR_VS_DBSignals
+Mcu.Pin31=VP_PWR_VS_SECSignals
+Mcu.Pin32=VP_PWR_VS_LPOM
+Mcu.Pin33=VP_PWR_Vdda
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin36=VP_LPBAM_VS_SIG1
+Mcu.Pin37=VP_LPBAM_VS_SIG4
+Mcu.Pin38=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin4=PC15-OSC32_OUT (PC15)
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2
+Mcu.Pin7=PA0
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U575ZITxQ
@@ -71,6 +93,7 @@ MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
+NVIC.GPDMA1_Channel0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -80,6 +103,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_3
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.Signal=S_TIM2_CH1
+PA1.Signal=S_TIM2_CH2
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=USART1_RX
 PA10.GPIO_PuPd=GPIO_PULLDOWN
@@ -110,6 +135,8 @@ PA15\ (JTDI).GPIO_Label=UCPD1_CC1
 PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Mode=Sink_AllSignals
 PA15\ (JTDI).Signal=UCPD1_CC1
+PA2.Signal=S_TIM2_CH3
+PA3.Signal=S_TIM2_CH4
 PA9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=USART1_TX
 PA9.GPIO_PuPd=GPIO_PULLDOWN
@@ -117,6 +144,9 @@ PA9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB13.Locked=true
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=UCPD_FLT
 PB14.Locked=true
@@ -140,6 +170,8 @@ PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PC1.Mode=Full_Duplex_Master
+PC1.Signal=SPI2_MOSI
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=USER_BUTTON
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -162,6 +194,14 @@ PC7.GPIO_PuPd=GPIO_PULLUP
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC7.Locked=true
 PC7.Signal=GPIO_Output
+PD3.Mode=Full_Duplex_Master
+PD3.Signal=SPI2_MISO
+PE3.GPIOParameters=GPIO_PuPd
+PE3.GPIO_PuPd=GPIO_PULLUP
+PE3.Signal=S_TIM3_CH1
+PE4.GPIOParameters=GPIO_PuPd
+PE4.GPIO_PuPd=GPIO_PULLUP
+PE4.Signal=S_TIM3_CH2
 PG2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PG2.GPIO_Label=LED_RED
 PG2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -203,7 +243,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_UCPD1_Init-UCPD1-false-LL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_GPDMA1_Init-GPDMA1-false-LL-true,4-MX_ICACHE_Init-ICACHE-false-LL-true,5-MX_UCPD1_Init-UCPD1-false-LL-true,6-MX_USART1_UART_Init-USART1-false-LL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,8-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,9-MX_TIM2_Init-TIM2-false-LL-true,10-MX_ADC1_Init-ADC1-false-LL-true,11-MX_SPI2_Init-SPI2-false-LL-true,12-MX_TIM3_Init-TIM3-false-LL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-LL-true,0-MX_PWR_Init-PWR-false-LL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -272,12 +312,42 @@ RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
+SH.S_TIM3_CH2.ConfNb=1
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI2.CalculateBaudRate=5.0 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,PeriodNoDither
+TIM2.PeriodNoDither=9
+TIM2.Prescaler=19
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IC1Filter=8
+TIM3.IC2Filter=8
+TIM3.IPParameters=EncoderMode,IC1Filter,IC2Filter
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
-VP_ICACHE_VS_ENABLE_ICACHE_MEMORY.Mode=Memoryregions
-VP_ICACHE_VS_ENABLE_ICACHE_MEMORY.Signal=ICACHE_VS_ENABLE_ICACHE_MEMORY
+VP_GPDMA1_VS_GPDMACH0.Mode=SIMPLEREQUEST_GPDMACH0
+VP_GPDMA1_VS_GPDMACH0.Signal=GPDMA1_VS_GPDMACH0
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
 VP_LPBAMQUEUE_VS_QUEUE.Mode=QUEUEMODE
@@ -298,6 +368,8 @@ VP_PWR_Vdda.Mode=isolationVdda
 VP_PWR_Vdda.Signal=PWR_Vdda
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-U575ZI-Q
 boardIOC=true
 isbadioc=false
