--- a/firmware-pcb/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-pcb/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -43,10 +43,10 @@ Mcu.Pin1=PE3
 Mcu.Pin10=PC1
 Mcu.Pin11=PC2
 Mcu.Pin12=PC3
-Mcu.Pin13=PA1
-Mcu.Pin14=PA2
-Mcu.Pin15=PA3
-Mcu.Pin16=PA5
+Mcu.Pin13=PA0
+Mcu.Pin14=PA1
+Mcu.Pin15=PA2
+Mcu.Pin16=PA3
 Mcu.Pin17=PA6
 Mcu.Pin18=PA7
 Mcu.Pin19=PC4
@@ -119,11 +119,12 @@ Mcu.Pin79=VP_LPBAMQUEUE_VS_QUEUE
 Mcu.Pin8=PH0-OSC_IN (PH0)
 Mcu.Pin80=VP_PWR_VS_SECSignals
 Mcu.Pin81=VP_SYS_VS_Systick
-Mcu.Pin82=VP_LPBAM_VS_SIG1
-Mcu.Pin83=VP_LPBAM_VS_SIG4
-Mcu.Pin84=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin82=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin83=VP_LPBAM_VS_SIG1
+Mcu.Pin84=VP_LPBAM_VS_SIG4
+Mcu.Pin85=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin9=PC0
-Mcu.PinsNb=85
+Mcu.PinsNb=86
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U585VITx
@@ -146,6 +147,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=LED1OUT
+PA0.Locked=true
+PA0.Signal=S_TIM2_CH1
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LED2OUT
 PA1.Signal=S_TIM2_CH2
@@ -179,9 +184,6 @@ PA2.Signal=S_TIM2_CH3
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=LED4OUT
 PA3.Signal=S_TIM2_CH4
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=LED1OUT
-PA5.Signal=S_TIM2_CH1
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=ROW0
 PA6.Locked=true
@@ -588,6 +590,10 @@ TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,PeriodNoDither,Prescaler
 TIM2.PeriodNoDither=9
 TIM2.Prescaler=19
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IC1Filter=8
+TIM3.IC2Filter=8
+TIM3.IPParameters=EncoderMode,IC1Filter,IC2Filter
 VP_GPDMA1_VS_GPDMACH0.Mode=SIMPLEREQUEST_GPDMACH0
 VP_GPDMA1_VS_GPDMACH0.Signal=GPDMA1_VS_GPDMACH0
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
@@ -604,5 +610,7 @@ VP_PWR_VS_SECSignals.Mode=Security/Privilege
 VP_PWR_VS_SECSignals.Signal=PWR_VS_SECSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 isbadioc=false
