--- a/firmware-pcb/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-pcb/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -4,22 +4,19 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
-GPDMA1.CIRCULARMODE_GPDMACH0=DISABLE
 GPDMA1.DATAHANDLING_GPDMACH0=ENABLE
 GPDMA1.DESTDATAWIDTH_GPDMACH0=DMA_DEST_DATAWIDTH_WORD
 GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
 GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
-GPDMA1.IPParameters=CIRCULARMODE_GPDMACH0,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCINC_GPDMACH0,SRCDATAWIDTH_GPDMACH0,DESTDATAWIDTH_GPDMACH0,DATAHANDLING_GPDMACH0,TRIGGERPOLARITY_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0
+GPDMA1.IPParameters=IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCINC_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0,DESTDATAWIDTH_GPDMACH0,DATAHANDLING_GPDMACH0
 GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_TIM2_UP
-GPDMA1.SRCDATAWIDTH_GPDMACH0=DMA_SRC_DATAWIDTH_BYTE
 GPDMA1.SRCINC_GPDMACH0=DMA_SINC_INCREMENTED
 GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH0=DMA_SRC_ALLOCATED_PORT1
-GPDMA1.TRIGGERPOLARITY_GPDMACH0=DMA_TRIG_POLARITY_MASKED
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
-Mcu.CPN=STM32U585VIT6
+Mcu.CPN=STM32U575VIT6
 Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32U5
 Mcu.IP0=CORTEX_M33_NS
@@ -39,118 +36,119 @@ Mcu.IP7=NVIC
 Mcu.IP8=PWR
 Mcu.IP9=RCC
 Mcu.IPNb=16
-Mcu.Name=STM32U585VITx
+Mcu.Name=STM32U575VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PC1
-Mcu.Pin11=PC2
-Mcu.Pin12=PC3
-Mcu.Pin13=PA0
-Mcu.Pin14=PA1
-Mcu.Pin15=PA2
-Mcu.Pin16=PA3
-Mcu.Pin17=PA6
-Mcu.Pin18=PA7
-Mcu.Pin19=PC4
+Mcu.Pin10=PC0
+Mcu.Pin11=PC1
+Mcu.Pin12=PC2
+Mcu.Pin13=PC3
+Mcu.Pin14=PA0
+Mcu.Pin15=PA1
+Mcu.Pin16=PA2
+Mcu.Pin17=PA3
+Mcu.Pin18=PA4
+Mcu.Pin19=PA5
 Mcu.Pin2=PE4
-Mcu.Pin20=PC5
-Mcu.Pin21=PB1
-Mcu.Pin22=PB2
-Mcu.Pin23=PE7
-Mcu.Pin24=PE8
-Mcu.Pin25=PE9
-Mcu.Pin26=PE10
-Mcu.Pin27=PE11
-Mcu.Pin28=PE12
-Mcu.Pin29=PE13
+Mcu.Pin20=PA6
+Mcu.Pin21=PA7
+Mcu.Pin22=PC4
+Mcu.Pin23=PC5
+Mcu.Pin24=PB0
+Mcu.Pin25=PB1
+Mcu.Pin26=PB2
+Mcu.Pin27=PE7
+Mcu.Pin28=PE8
+Mcu.Pin29=PE9
 Mcu.Pin3=PE5
-Mcu.Pin30=PE14
-Mcu.Pin31=PE15
-Mcu.Pin32=PB10
-Mcu.Pin33=PB12
-Mcu.Pin34=PB13
-Mcu.Pin35=PB14
-Mcu.Pin36=PB15
-Mcu.Pin37=PD8
-Mcu.Pin38=PD9
-Mcu.Pin39=PD10
+Mcu.Pin30=PE10
+Mcu.Pin31=PE11
+Mcu.Pin32=PE12
+Mcu.Pin33=PE13
+Mcu.Pin34=PE14
+Mcu.Pin35=PE15
+Mcu.Pin36=PB10
+Mcu.Pin37=PB12
+Mcu.Pin38=PB13
+Mcu.Pin39=PB14
 Mcu.Pin4=PE6
-Mcu.Pin40=PD11
-Mcu.Pin41=PD12
-Mcu.Pin42=PD13
-Mcu.Pin43=PD14
-Mcu.Pin44=PD15
-Mcu.Pin45=PC6
-Mcu.Pin46=PC7
-Mcu.Pin47=PC8
-Mcu.Pin48=PC9
-Mcu.Pin49=PA8
+Mcu.Pin40=PB15
+Mcu.Pin41=PD8
+Mcu.Pin42=PD9
+Mcu.Pin43=PD10
+Mcu.Pin44=PD11
+Mcu.Pin45=PD12
+Mcu.Pin46=PD13
+Mcu.Pin47=PD14
+Mcu.Pin48=PD15
+Mcu.Pin49=PC6
 Mcu.Pin5=PC13
-Mcu.Pin50=PA9
-Mcu.Pin51=PA10
-Mcu.Pin52=PA11
-Mcu.Pin53=PA12
-Mcu.Pin54=PA13 (JTMS/SWDIO)
-Mcu.Pin55=PA14 (JTCK/SWCLK)
-Mcu.Pin56=PA15 (JTDI)
-Mcu.Pin57=PC10
-Mcu.Pin58=PC11
-Mcu.Pin59=PC12
+Mcu.Pin50=PC7
+Mcu.Pin51=PC8
+Mcu.Pin52=PC9
+Mcu.Pin53=PA8
+Mcu.Pin54=PA9
+Mcu.Pin55=PA10
+Mcu.Pin56=PA11
+Mcu.Pin57=PA12
+Mcu.Pin58=PA13 (JTMS/SWDIO)
+Mcu.Pin59=PA14 (JTCK/SWCLK)
 Mcu.Pin6=PC14-OSC32_IN (PC14)
-Mcu.Pin60=PD0
-Mcu.Pin61=PD1
-Mcu.Pin62=PD2
-Mcu.Pin63=PD3
-Mcu.Pin64=PD4
-Mcu.Pin65=PD5
-Mcu.Pin66=PD6
-Mcu.Pin67=PD7
-Mcu.Pin68=PB3 (JTDO/TRACESWO)
-Mcu.Pin69=PB4 (NJTRST)
+Mcu.Pin60=PA15 (JTDI)
+Mcu.Pin61=PC10
+Mcu.Pin62=PC11
+Mcu.Pin63=PC12
+Mcu.Pin64=PD0
+Mcu.Pin65=PD1
+Mcu.Pin66=PD2
+Mcu.Pin67=PD3
+Mcu.Pin68=PD4
+Mcu.Pin69=PD5
 Mcu.Pin7=PC15-OSC32_OUT (PC15)
-Mcu.Pin70=PB5
-Mcu.Pin71=PB6
-Mcu.Pin72=PB7
-Mcu.Pin73=PB8
-Mcu.Pin74=PB9
-Mcu.Pin75=PE0
-Mcu.Pin76=PE1
-Mcu.Pin77=VP_GPDMA1_VS_GPDMACH0
-Mcu.Pin78=VP_ICACHE_VS_ICACHE
-Mcu.Pin79=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin70=PD6
+Mcu.Pin71=PD7
+Mcu.Pin72=PB3 (JTDO/TRACESWO)
+Mcu.Pin73=PB4 (NJTRST)
+Mcu.Pin74=PB5
+Mcu.Pin75=PB6
+Mcu.Pin76=PB7
+Mcu.Pin77=PH3-BOOT0
+Mcu.Pin78=PB8
+Mcu.Pin79=PB9
 Mcu.Pin8=PH0-OSC_IN (PH0)
-Mcu.Pin80=VP_PWR_VS_SECSignals
-Mcu.Pin81=VP_SYS_VS_Systick
-Mcu.Pin82=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin83=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin84=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin85=VP_LPBAM_VS_SIG1
-Mcu.Pin86=VP_LPBAM_VS_SIG4
-Mcu.Pin87=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin9=PC0
-Mcu.PinsNb=88
+Mcu.Pin80=PE0
+Mcu.Pin81=PE1
+Mcu.Pin82=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin83=VP_ICACHE_VS_ICACHE
+Mcu.Pin84=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin85=VP_PWR_VS_SECSignals
+Mcu.Pin86=VP_SYS_VS_Systick
+Mcu.Pin87=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin88=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin89=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin9=PH1-OSC_OUT (PH1)
+Mcu.Pin90=VP_LPBAM_VS_SIG1
+Mcu.Pin91=VP_LPBAM_VS_SIG4
+Mcu.Pin92=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.PinsNb=93
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32U585VITx
+Mcu.UserName=STM32U575VITx
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.EXTI14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.EXTI15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.EXTI5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.EXTI6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI5_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.GPDMA1_Channel0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.GPDMA1_Channel0_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:false\:false\:false
 NVIC.TIM6_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -160,6 +158,7 @@ PA0.Locked=true
 PA0.Signal=S_TIM2_CH1
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LED2OUT
+PA1.Locked=true
 PA1.Signal=S_TIM2_CH2
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=COL24
@@ -175,10 +174,12 @@ PA12.Locked=true
 PA12.Signal=GPIO_Input
 PA13\ (JTMS/SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS/SWDIO).GPIO_Label=SWDIO
+PA13\ (JTMS/SWDIO).Locked=true
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).GPIOParameters=GPIO_Label
 PA14\ (JTCK/SWCLK).GPIO_Label=SWCLK
+PA14\ (JTCK/SWCLK).Locked=true
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
 PA15\ (JTDI).GPIOParameters=GPIO_Label
@@ -187,10 +188,14 @@ PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=LED3OUT
+PA2.Locked=true
 PA2.Signal=S_TIM2_CH3
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=LED4OUT
+PA3.Locked=true
 PA3.Signal=S_TIM2_CH4
+PA4.Locked=true
+PA5.Locked=true
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=ROW0
 PA6.Locked=true
@@ -207,6 +212,7 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=COL25
 PA9.Locked=true
 PA9.Signal=GPIO_Input
+PB0.Locked=true
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=ROW4
 PB1.Locked=true
@@ -221,14 +227,17 @@ PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=SPI2SCK
+PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=SPI2MISO
+PB14.Locked=true
 PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=SPI2MOSI
+PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
 PB2.GPIOParameters=GPIO_Label
@@ -283,18 +292,21 @@ PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=COL18
 PC12.Locked=true
 PC12.Signal=GPIO_Input
-PC13.GPIOParameters=GPIO_Label
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13.GPIO_Label=LDR2IN
+PC13.GPIO_PuPd=GPIO_PULLUP
 PC13.Locked=true
-PC13.Signal=GPXTI13
-PC14-OSC32_IN\ (PC14).GPIOParameters=GPIO_Label
+PC13.Signal=GPIO_Input
+PC14-OSC32_IN\ (PC14).GPIOParameters=GPIO_PuPd,GPIO_Label
 PC14-OSC32_IN\ (PC14).GPIO_Label=LDR3IN
+PC14-OSC32_IN\ (PC14).GPIO_PuPd=GPIO_PULLUP
 PC14-OSC32_IN\ (PC14).Locked=true
-PC14-OSC32_IN\ (PC14).Signal=GPXTI14
-PC15-OSC32_OUT\ (PC15).GPIOParameters=GPIO_Label
+PC14-OSC32_IN\ (PC14).Signal=GPIO_Input
+PC15-OSC32_OUT\ (PC15).GPIOParameters=GPIO_PuPd,GPIO_Label
 PC15-OSC32_OUT\ (PC15).GPIO_Label=LDR4IN
+PC15-OSC32_OUT\ (PC15).GPIO_PuPd=GPIO_PULLUP
 PC15-OSC32_OUT\ (PC15).Locked=true
-PC15-OSC32_OUT\ (PC15).Signal=GPXTI15
+PC15-OSC32_OUT\ (PC15).Signal=GPIO_Input
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=DEBUG3
 PC2.Locked=true
@@ -427,20 +439,26 @@ PE2.GPIOParameters=GPIO_Label
 PE2.GPIO_Label=COL0
 PE2.Locked=true
 PE2.Signal=GPIO_Input
-PE3.GPIOParameters=GPIO_Label
+PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE3.GPIO_Label=ENCODER_A
+PE3.GPIO_PuPd=GPIO_PULLUP
+PE3.Locked=true
 PE3.Signal=S_TIM3_CH1
-PE4.GPIOParameters=GPIO_Label
+PE4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE4.GPIO_Label=ENCODER_B
+PE4.GPIO_PuPd=GPIO_PULLUP
+PE4.Locked=true
 PE4.Signal=S_TIM3_CH2
-PE5.GPIOParameters=GPIO_Label
+PE5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE5.GPIO_Label=ENCODER_SW
+PE5.GPIO_PuPd=GPIO_PULLUP
 PE5.Locked=true
 PE5.Signal=GPXTI5
-PE6.GPIOParameters=GPIO_Label
+PE6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE6.GPIO_Label=LDR1IN
+PE6.GPIO_PuPd=GPIO_PULLUP
 PE6.Locked=true
-PE6.Signal=GPXTI6
+PE6.Signal=GPIO_Input
 PE7.GPIOParameters=GPIO_Label
 PE7.GPIO_Label=ROW6
 PE7.Locked=true
@@ -455,8 +473,11 @@ PE9.Locked=true
 PE9.Signal=GPIO_Input
 PH0-OSC_IN\ (PH0).GPIOParameters=GPIO_Label
 PH0-OSC_IN\ (PH0).GPIO_Label=OSC_IN
+PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Clock-Source
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
+PH1-OSC_OUT\ (PH1).Locked=true
+PH3-BOOT0.Locked=true
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -466,7 +487,7 @@ ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32U585VITx
+ProjectManager.DeviceId=STM32U575VITx
 ProjectManager.FirmwarePackage=STM32Cube FW_U5 V1.3.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
@@ -489,7 +510,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_GPDMA1_Init-GPDMA1-false-LL-true,4-MX_ICACHE_Init-ICACHE-false-LL-true,5-MX_SPI2_Init-SPI2-false-LL-true,6-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,7-MX_TIM3_Init-TIM3-false-LL-true,8-MX_TIM2_Init-TIM2-false-LL-true,9-MX_TIM6_Init-TIM6-false-LL-true,10-MX_TIM7_Init-TIM7-false-LL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-LL-true,0-MX_PWR_Init-PWR-false-LL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPDMA1_Init-GPDMA1-false-LL-true,3-MX_GPIO_Init-GPIO-false-LL-true,4-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,5-MX_ICACHE_Init-ICACHE-false-LL-true,6-MX_SPI2_Init-SPI2-false-LL-true,7-MX_TIM2_Init-TIM2-false-LL-true,8-MX_TIM3_Init-TIM3-false-LL-true,9-MX_TIM6_Init-TIM6-false-LL-true,10-MX_TIM7_Init-TIM7-false-LL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-LL-true,0-MX_PWR_Init-PWR-false-LL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -502,9 +523,9 @@ RCC.CK48Freq_Value=48000000
 RCC.CRSFreq_Value=48000000
 RCC.CortexFreq_Value=160000000
 RCC.DACFreq_Value=32000
-RCC.EPOD_VALUE=16000000
+RCC.EPOD_VALUE=4000000
 RCC.FCLKCortexFreq_Value=160000000
-RCC.FDCANFreq_Value=80000000
+RCC.FDCANFreq_Value=160000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=160000000
 RCC.HSE_VALUE=16000000
@@ -514,7 +535,7 @@ RCC.I2C1Freq_Value=160000000
 RCC.I2C2Freq_Value=160000000
 RCC.I2C3Freq_Value=160000000
 RCC.I2C4Freq_Value=160000000
-RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSIClockRange,MSI_VALUE,OCTOSPIMFreq_Value,PLL1R,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAESFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
 RCC.LPTIM2Freq_Value=160000000
 RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
@@ -523,27 +544,22 @@ RCC.LSIDIV_VALUE=32000
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=160000000
 RCC.MDF1Freq_Value=160000000
-RCC.MSIClockRange=RCC_MSIRANGE_0
-RCC.MSI_VALUE=48000000
+RCC.MSI_VALUE=4000000
 RCC.OCTOSPIMFreq_Value=160000000
-RCC.PLL1R=1
-RCC.PLL2PoutputFreq_Value=3096000000
-RCC.PLL2QoutputFreq_Value=3096000000
-RCC.PLL2RoutputFreq_Value=3096000000
-RCC.PLL3PoutputFreq_Value=3096000000
-RCC.PLL3QoutputFreq_Value=3096000000
-RCC.PLL3RoutputFreq_Value=3096000000
-RCC.PLLFRACN=0
-RCC.PLLN=10
-RCC.PLLPoutputFreq_Value=80000000
-RCC.PLLQoutputFreq_Value=80000000
+RCC.PLL2PoutputFreq_Value=258000000
+RCC.PLL2QoutputFreq_Value=258000000
+RCC.PLL2RoutputFreq_Value=258000000
+RCC.PLL3PoutputFreq_Value=258000000
+RCC.PLL3QoutputFreq_Value=258000000
+RCC.PLL3RoutputFreq_Value=258000000
+RCC.PLLN=80
+RCC.PLLPoutputFreq_Value=160000000
+RCC.PLLQoutputFreq_Value=160000000
 RCC.PLLRCLKFreq_Value=160000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI
 RCC.RNGFreq_Value=48000000
-RCC.SAESFreq_Value=48000000
-RCC.SAI1Freq_Value=3096000000
-RCC.SAI2Freq_Value=3096000000
-RCC.SDMMCFreq_Value=80000000
+RCC.SAI1Freq_Value=258000000
+RCC.SAI2Freq_Value=258000000
+RCC.SDMMCFreq_Value=160000000
 RCC.SPI1Freq_Value=160000000
 RCC.SPI2Freq_Value=160000000
 RCC.SPI3Freq_Value=160000000
@@ -555,22 +571,14 @@ RCC.USART1Freq_Value=160000000
 RCC.USART2Freq_Value=160000000
 RCC.USART3Freq_Value=160000000
 RCC.USBFreq_Value=48000000
-RCC.VCOInput2Freq_Value=48000000
-RCC.VCOInput3Freq_Value=48000000
-RCC.VCOInputFreq_Value=16000000
-RCC.VCOOutputFreq_Value=160000000
-RCC.VCOPLL2OutputFreq_Value=6192000000
-RCC.VCOPLL3OutputFreq_Value=6192000000
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
-SH.GPXTI14.0=GPIO_EXTI14
-SH.GPXTI14.ConfNb=1
-SH.GPXTI15.0=GPIO_EXTI15
-SH.GPXTI15.ConfNb=1
+RCC.VCOInput2Freq_Value=4000000
+RCC.VCOInput3Freq_Value=4000000
+RCC.VCOInputFreq_Value=4000000
+RCC.VCOOutputFreq_Value=320000000
+RCC.VCOPLL2OutputFreq_Value=516000000
+RCC.VCOPLL3OutputFreq_Value=516000000
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
-SH.GPXTI6.0=GPIO_EXTI6
-SH.GPXTI6.ConfNb=1
 SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
@@ -583,8 +591,8 @@ SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
 SH.S_TIM3_CH2.ConfNb=1
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI2.CalculateBaudRate=10.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI2.CalculateBaudRate=5.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
@@ -594,13 +602,13 @@ TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,PeriodNoDither,Prescaler
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,PeriodNoDither
 TIM2.PeriodNoDither=9
 TIM2.Prescaler=19
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=8
 TIM3.IC2Filter=8
-TIM3.IPParameters=EncoderMode,IC1Filter,IC2Filter
+TIM3.IPParameters=IC1Filter,IC2Filter,EncoderMode
 TIM6.IPParameters=Prescaler,PeriodNoDither
 TIM6.PeriodNoDither=9
 TIM6.Prescaler=15999
